main.tf
# AWS Account Info 

provider "aws" {
  region = "us-east-1"
  access_key = "your key"
  secret_key = "your secret"
}



# # 1. Create vpc

resource "aws_vpc" "prod-vpc" {
   cidr_block = "10.0.0.0/16"
   tags = {
   Name = "prod-vpc"
  }
}

# # 2. Create Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id


}


# # 3. Create Custom Route Table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
     cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
   }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
   }

   tags = {
     Name = "Prod"
  }
 }

# # 4. Create a Public Subnet 

 resource "aws_subnet" "public-subnet" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = "10.0.1.0/24"
   availability_zone = "us-east-1b"

  tags = {
     Name = "public-subnet"
   }
 }

# # 4.1 Create a  Private Subnet 
  resource "aws_subnet" "private-subnet" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = "10.0.2.0/24"
   availability_zone = "us-east-1b"

  tags = {
     Name = "public-subnet"
   }
 }

# # 5. Associate subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.prod-route-table.id
}
# # 6. Create Security Group to allow port 22,80,443
 resource "aws_security_group" "BCK-SVR-SG" {
   name        = "allow_web_traffic"
   description = "Allow Web inbound traffic"
   vpc_id      = aws_vpc.prod-vpc.id

   ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
     cidr_blocks = ["0.0.0.0/0"]
  }
   ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
   }
   ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "BCK-SVR-SG"
   }
 }

# # 7. Create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "public-interface" {
  subnet_id       = aws_subnet.public-subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.BCK-SVR-SG.id]

 }

# # 7.1 Create a network interface with an ip in the subnet that was created in step 4.1

resource "aws_network_interface" "private-interface" {
  subnet_id       = aws_subnet.private-subnet.id
  private_ips     = ["10.0.2.50"]
  security_groups = [aws_security_group.BCK-SVR-SG.id]
} 


# # 8. Assign an elastic IP to the network interface created in step 7

 resource "aws_eip" "one" {
   vpc                       = true
   network_interface         = aws_network_interface.public-interface.id
   associate_with_private_ip = "10.0.1.50"
   depends_on                = [aws_internet_gateway.gw]
   tags = {
    Name = "BCK-SVR-EIP"
    ENV = "PROD"
  }
 }

 output "server_public_ip" {
   value = aws_eip.one.public_ip
 }

# # 9. Create Amazon Linux BACK-SVR and install/dependencies

 resource "aws_instance" "BCK-SVR" {
   ami               = "ami-0cff7528ff583bf9a"
   instance_type     = "t3.micro"
   availability_zone = "us-east-1b"
      ebs_block_device {
    device_name           = "/dev/xvda"
    volume_size           = 30
    volume_type           = "gp2"
    delete_on_termination = true
    tags = {
      Name = "BCK-SVR-VOL"
    }
  }  
   key_name          = "BCK-SVR"
   user_data         = <<EOF
#!/bin/bash
sudo yum update -y
sudo yum upgrade -y
sudo yum install -y curl
sudo yum install -y gcc-c++ make
curl -sL https://rpm.nodesource.com/setup_16.x | sudo -E bash -
sudo yum install -y nodejs
sudo amazon-linux-extras enable nginx1
sudo yum clean metadata
sudo yum install -y nginx
sudo systemctl start nginx<<EOD
EOD
EOF
 
   network_interface {
     device_index         = 0
     network_interface_id = aws_network_interface.public-interface.id
   }
      network_interface {
     device_index         = 1
     network_interface_id = aws_network_interface.private-interface.id
   }
  tags = {
    Name = "BCK-SVR"
  }
 }










# output "server_private_ip" {
#   value = aws_instance.web-server-instance.private_ip

# }

# output "server_id" {
#   value = aws_instance.web-server-instance.id
# }


# resource "<provider>_<resource_type>" "name" {
#     config options.....
#     key = "value"
#     key2 = "another value"
# }
